--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -15,6 +15,7 @@ salary.received=You have successfully received your salary! +%s coins
 salary.already.received.title=You have already received your salary.
 salary.already.received.description=Until the next paycheck %s
 
+games.general.double.win=%s is win!
 games.general.win=You Win!
 games.general.draw=It's Draw!
 games.general.lose=You Lose!
@@ -25,6 +26,7 @@ games.general.id=ID of games: %s
 games.general.streak=Streak
 games.general.error.nomoney.title=No money(
 games.general.error.nomoney.description=You dont have %s coins
+games.general.vs=%s vs %s
 
 games.coin.tails=TAILS
 games.coin.heads=HEADS
@@ -32,7 +34,9 @@ games.coin.result=You choice: %s Gived: %s
 
 games.dice.dropped=Dropped:\n%s
 
-games.rsp.choice=Your Choise: %s
-games.rsp.opchoice=Opponent Choice %s
+games.rsp.select.choice=%s select choice
+games.rsp.choice=%s choise: %s
+games.rsp.syntax="Game: %s (%s) vs %s (%s)"
 
 games.duel.result=You choice: %s\nOpponent choice: %s
+
