Small Bug Fix :)

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -36,7 +36,7 @@ games.dice.dropped=Dropped:\n%s
 
 games.rsp.select.choice=%s select choice
 games.rsp.choice=%s choise: %s
-games.rsp.syntax="Game: %s (%s) vs %s (%s)"
+games.rsp.syntax=Game: **%s** (%s) vs **%s** (%s).
 games.rsp.button.paper=Paper
 games.rsp.button.rock=Rock
 games.rsp.button.scissors=Scissors
